2017-03-23  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/nasl_plugins.c (nasl_plugin_add): Adjust documentation with
	recent parameter name change.

2017-03-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (proto_post_wrapped): Get tags instead of full nvti.
	(get_plugin_preference): Get name instead of full nvti.

	* src/attack.c (launch_plugin): Use nvticache_get_filename().

	* src/nasl_plugins.c (nasl_plugin_add): Call nvticache_check(). Adjust
	for nvticache changes.
	(prefs_add_nvti): Take name and prefs as arguments.

	* src/openvassd.c (flush_all_kbs), src/pluginload.c (plugins_init):
	Adjust function call.

	* src/pluginlaunch.c (update_running_processes), src/pluginscheduler.c
	(plugin_add, check_dependency_cycles): Use nvticache functions.

2017-03-22  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* misc/nvt_categories.h: Flush trailing whitespace.

	* nasl/nasl_text_utils.c: Define G_LOG_DOMAIN.

2017-03-20  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/pluginscheduler.c: Include gvm/base/prefs.h.
	(plugin_add): Check for deprecated plugin before attempting
	to schedule it.

2017-03-16  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_crypto2.c (nasl_rsa_private_decrypt): New function.

	* nasl/nasl_crypto2.h: Add new function prototype.

	* nasl/nasl_init.c (libfuncs): Add rsa_private_decrypt().

2017-03-16  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* misc/bpf_share.c (print_pcap_error): New function which use
	glib to log errors.
	(bpf_open_live): Use the new function print_pcap_error instead of
	pcap_perror().

2017-03-15  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/network.c (host_info_init): Update documentation to match
	code changes.

2017-03-15  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_init.c (libfuncs): Add argument to rsa_public_encrypt
	to set no padding.

	* nasl/nasl_crypto2.c (nasl_rsa_public_encrypt): Add no padding
	functionality.
